--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
 bytemuck = { version = "1.21.0", features = ["derive"] }
 chrono = "0.4.39"
 clap = "4.5.29"
 ctrlc = "3.4.5"
 env_logger = "0.11.6"
 log = "0.4.25"
+serde = {  version = "1.0.217", features = ["derive"] }
 serialport = "4.7.0"
