--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bincode = "1.3.3"
 chrono = "0.4.39"
 clap = "4.5.29"
+csv = "1.3.1"
 ctrlc = "3.4.5"
 env_logger = "0.11.6"
 log = "0.4.25"
